[tool.poetry]
name = "habit-tracker"
version = "0.1.0"
description = ""
authors = ["Youssef Atta'i <youssefgalalnazem@gmail.com>"]
readme = "README.md"
packages = [{include = "habit_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
